--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "mode-watcher": "^0.5.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
@@ -28,8 +29,9 @@
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.10.5",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^0.22.0",
+    "bits-ui": "^1.0.0-next.77",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.471.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwind-merge": "^2.6.0",
