--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "npm run tauri dev",
+    "start:tauri": "npm run tauri dev",
+    "start": "vite dev --open",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
@@ -20,24 +21,32 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
-    "mode-watcher": "^0.5.0"
+    "color-parse": "^2.0.2",
+    "color-space": "^2.1.1",
+    "color-stringify": "^1.2.1"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tauri-apps/cli": "^2",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.10.5",
     "autoprefixer": "^10.4.20",
     "bits-ui": "^1.0.0-next.77",
     "clsx": "^2.1.1",
+    "formsnap": "^1.0.1",
     "lucide-svelte": "^0.471.0",
+    "mode-watcher": "^0.5.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-sonner": "^0.3.28",
+    "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "^3.4.9",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "zod": "^3.24.1"
   }
 }
