color conversion is completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
     "**/node_modules": true,
     "**/*.code-search": true,
     "**/backups": true
+  },
+  "[svelte]": {
+    "togglequotes.chars": ["\"", "'", "`"],
+    "editor.defaultFormatter": "svelte.svelte-vscode"
   }
 }
