--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
-    "color-parse": "^2.0.2",
-    "color-space": "^2.1.1",
-    "color-stringify": "^1.2.1"
+    "color": "^4.2.3"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
@@ -31,14 +29,16 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tauri-apps/cli": "^2",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/color": "^4.2.0",
     "@types/node": "^22.10.5",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^1.0.0-next.77",
+    "bits-ui": "^1.0.0-next.82",
     "clsx": "^2.1.1",
     "formsnap": "^1.0.1",
     "lucide-svelte": "^0.471.0",
     "mode-watcher": "^0.5.1",
     "svelte": "^5.0.0",
+    "svelte-awesome-color-picker": "^3.1.4",
     "svelte-check": "^4.0.0",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.23.1",
